RESOLVED FIXED172722
REGRESSION(r217515): Correct iterator invalidation bug (AGAIN)
https://bugs.webkit.org/show_bug.cgi?id=172722
Summary REGRESSION(r217515): Correct iterator invalidation bug (AGAIN)
Brent Fulgham
Reported 2017-05-30 09:07:38 PDT
I reintroduced a bug involving an invalidated iterator in r217515. This returns this code to the "copy" behavior used prior to r217515.
Attachments
Patch (2.34 KB, patch)
2017-05-30 09:13 PDT, Brent Fulgham
no flags
Radar WebKit Bug Importer
Comment 1 2017-05-30 09:09:13 PDT
Brent Fulgham
Comment 2 2017-05-30 09:13:45 PDT
WebKit Commit Bot
Comment 3 2017-05-30 09:57:24 PDT
Comment on attachment 311509 [details] Patch Clearing flags on attachment: 311509 Committed r217558: <http://trac.webkit.org/changeset/217558>
WebKit Commit Bot
Comment 4 2017-05-30 09:57:25 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5 2017-05-30 10:15:46 PDT
Comment on attachment 311509 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=311509&action=review > Source/WebCore/loader/ResourceLoadObserver.cpp:158 > + // We must make a copy here, because later calls to 'ensureResourceStatisticsForPrimaryDomain' will invalidate the returned reference:: Extra ':'.
Brent Fulgham
Comment 6 2017-05-30 10:48:14 PDT
Rats! Typo fixed in: Committed r217561: <http://trac.webkit.org/changeset/217561>
Note You need to log in before you can comment on or make changes to this bug.